Fixed: Actually figured out subprocceses.